--- a/release/0.1.0/sections/abstract-en.html
+++ b/release/0.1.0/sections/abstract-en.html
@@ -1,4 +1,2 @@
-<html>
 <h2>Abstract</h2><span class="markdown">
-a</span>
-</html>
+An ontology for describing containers and their software components.</span>
