--- a/release/0.1.0/sections/introduction-en.html
+++ b/release/0.1.0/sections/introduction-en.html
@@ -1,4 +1,4 @@
-<html><h2 id="intro" class="list">Introduction <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
+<h2 id="intro" class="list">Introduction <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
 <span class="markdown">
 This is a place holder text for the introduction. The introduction should briefly describe the ontology, its motivation, state of the art and goals.</span>
 <div id="namespacedeclarations">
@@ -10,16 +10,13 @@ This is a place holder text for the introduction. The introduction should briefl
 <tr><td><b>dp</b></td><td>&lt;http://dockerpedia.inf.utfsm.cl/vocab&gt;</td></tr>
 <tr><td><b>owl</b></td><td>&lt;http://www.w3.org/2002/07/owl&gt;</td></tr>
 <tr><td><b>rdf</b></td><td>&lt;http://www.w3.org/1999/02/22-rdf-syntax-ns&gt;</td></tr>
-<tr><td><b>terms</b></td><td>&lt;http://purl.org/dc/terms&gt;</td></tr>
+<tr><td><b>xml</b></td><td>&lt;http://www.w3.org/XML/1998/namespace&gt;</td></tr>
 <tr><td><b>xsd</b></td><td>&lt;http://www.w3.org/2001/XMLSchema&gt;</td></tr>
 <tr><td><b>rdfs</b></td><td>&lt;http://www.w3.org/2000/01/rdf-schema&gt;</td></tr>
 <tr><td><b>wicus-stack</b></td><td>&lt;http://purl.org/net/wicus-stack&gt;</td></tr>
-<tr><td><b>dockerpedia-inf-utfsm-cl</b></td><td>&lt;http://dockerpedia.inf.utfsm.cl&gt;</td></tr>
-<tr><td><b>net</b></td><td>&lt;http://purl.org/net&gt;</td></tr>
 <tr><td><b>vann</b></td><td>&lt;http://purl.org/vocab/vann&gt;</td></tr>
 <tr><td><b>dc</b></td><td>&lt;http://purl.org/dc/elements/1.1&gt;</td></tr>
 </tbody>
 </table>
 </div>
 </div>
-</html>
